--- a/asm/arm64_linux/Makefile
+++ b/asm/arm64_linux/Makefile
@@ -1,5 +1,5 @@
 hello64: hello64.o
-	ld -s -o helloworld helloworld.o
+	ld -s -o hello64 hello64.o
 
 hello64.o: hello64.s
 	as -o hello64.o hello64.s
