typo in makefile

--- a/asm/arm64_linux/macros/Makefile
+++ b/asm/arm64_linux/macros/Makefile
@@ -1,15 +1,12 @@
 OBJECTS = binprint.o print.o
 
 ifdef DEBUG
-	DEBUGFLGAS = -g
+	DEBUGFLAGS = -g
 else
 	DEBUGFLAGS= 
 endif
 
 all: binprint
-
-%o: %.S
-	gcc $(DEBUGFLAGS) -c $< -o $@
 
 %.o: %.s
 	as $(DEBUGFLAGS) $< -o $@
