readfile and macro lesson

--- a/asm/arm64_linux/decimal/Makefile
+++ b/asm/arm64_linux/decimal/Makefile
@@ -1,9 +1,9 @@
-OBJECTS = decimal.o common.o input.o conversion.o
+OBJECTS = decimal.o 
 
 all: decimal
 
 %.o: %.s
-	as -g $< -o $@
+	as $< -o $@
 
 decimal: $(OBJECTS)
 	ld -o decimal $(OBJECTS)
