Switched to GCC and #include, so we don't get import clashes

--- a/asm/arm64_linux/gpio_knightrider/Makefile
+++ b/asm/arm64_linux/gpio_knightrider/Makefile
@@ -1,6 +1,9 @@
-OBJECTS = knightrider.o 
+OBJECTS = knightrider.o system.o fileio.o gpio.o print.o
 
 all: knightrider
+
+%.o : %.S
+	gcc $(DEBUGFLGS) -c $< -o $@
 
 %.o: %.s
 	as -g $< -o $@
