made all jumps local jumps

--- a/asm/arm64_linux/gpio_knightrider/Makefile
+++ b/asm/arm64_linux/gpio_knightrider/Makefile
@@ -3,10 +3,10 @@ OBJECTS = knightrider.o system.o fileio.o gpio.o print.o
 all: knightrider
 
 %.o : %.S
-	gcc $(DEBUGFLGS) -c $< -o $@
+	gcc -c $< -o $@
 
 %.o: %.s
-	as -g $< -o $@
+	as $< -o $@
 
 knightrider: $(OBJECTS)
 	ld -o knightrider $(OBJECTS)
