--- a/zx/tut1/Makefile
+++ b/zx/tut1/Makefile
@@ -1,2 +1,3 @@
 Tut1:
 	pasmo -1 --alocal --tapbas tut1.asm tut1.tap > debug.txt
+	/Applications/Fuse.app/Contents/MacOS/Fuse ----auto-load --tape tut1.tap
