--- a/zx/tut1/Makefile
+++ b/zx/tut1/Makefile
@@ -1,3 +1,3 @@
 Tut1:
-	pasmo -1 --alocal --tapbas tut1.asm tut1.tap > debug.txt
-	/Applications/Fuse.app/Contents/MacOS/Fuse ----auto-load --tape tut1.tap
+	pasmo -1 --alocal --tapbas main.asm program.tap > debug.txt
+	/Applications/Fuse.app/Contents/MacOS/Fuse ----auto-load --tape program.tap
