run all tests in all dirs

--- a/netcalc/Makefile
+++ b/netcalc/Makefile
@@ -6,5 +6,4 @@ clean:
 
 test:
 	$(MAKE) build
-	go test ./lib -v -count=1|| exit 1
-	go test -v -count=1|| exit 1
+	go test ./... -v -count=1|| exit 1
