make install script and documetatopm

--- a/netcalc/Makefile
+++ b/netcalc/Makefile
@@ -7,3 +7,10 @@ clean:
 test:
 	$(MAKE) build
 	go test ./... -v -count=1|| exit 1
+
+install:
+	if [ -f ./bin/netcalc ]; then \
+		cp bin/netcalc /usr/local/bin/; \
+	else \
+		echo "Run make before running make install"; \
+	fi
