added api end point

--- a/netcalc/Makefile
+++ b/netcalc/Makefile
@@ -1,12 +1,14 @@
 build:
 	go build -o bin/netcalc -ldflags="-s -w" -trimpath
+	(cd netcalc_api && go build -o ../bin/netcalc_api -ldflags="-s -w" -trimpath)
 
 clean:
-	rm bin/netcalc
+	rm -f bin/netcalc
+	rm -f bin/netcalc_api
 
 test:
 	$(MAKE) build
-	go test ./... -v -count=1|| exit 1
+	go test ./... -v -count=1 || exit 1
 
 install:
 ifeq ($(OS), Windows_NT)
