Fixed Makefile and wall satify clangd

--- a/roman_numerals/c-roman/Makefile
+++ b/roman_numerals/c-roman/Makefile
@@ -6,7 +6,7 @@ OBJS = main.o
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS) -lm
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $<
